try to fix invisible text when deployed

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,4 +1,5 @@
 .footer-container {
+    z-index: 1000;
     color: white;
     text-transform: uppercase;
     display: flex;
